cabal-version:      2.4
name:               energy-engineering
version:            0.1.0.0
synopsis:           Energy and environmental engineering calculations in Haskell
description:        A learning project for engineers with Python/Java background
license:            MIT
author:             Your Name
maintainer:         your.email@example.com
category:           Engineering
build-type:         Simple

executable energy-engineering
    main-is:          Main.hs
    other-modules:    Energy.Conversions
                    , Web.Server
                    , Web.API
                    , Web.Views
    build-depends:    base ^>=4.17.0.0
                    , scotty
                    , aeson
                    , text
                    , wai-middleware-static
                    , wai-extra
                    , blaze-html
                    , blaze-markup
                    , http-types
    hs-source-dirs:   src
    default-language: Haskell2010
